  and #3193168 - Thomas Meyer) [merged into 5.0.x]

- Fixed whole word search (#3551515 Matthieu Casanova)

- Added missing localization string:
  options.plugin-manager.list-cache.minutes (#3574373 Matthieu Casanova)

- Correctly determine whether Look and Feel did change to not touch it if it
  stays the same as this might cause delays and Exceptions.
  (Björn "Vampire" Kautler)

- Handle menu bar mnemonics with precedence over otherwise defined shortcuts as
  they are shown visually to the user (#3528208 Björn "Vampire" Kautler)

- Fix keymap duplication (Björn "Vampire" Kautler)

- Fix AutoSave exception after multiline cut (#3017650 Thomas Meyer)

- Undomanager: Don't compact significant edits (#patch 3560615 Thomas Meyer)

- Fixed undo after replace all with beanshell only first occurance
  (#3551910 Thomas Meyer)

- Search all buffers now observes current BufferSet scope and can be restricted
  to the current view's buffers when scope is not global. (#3423442 Alan Ezust)

- Fix File status checking after buffer switch (#1871440 Alan Ezust)

- Fix File status checking before save (#3562315 Alan Ezust) [merged into 5.0.x]

- Fixed the StandaloneTextArea that cannot load keymaps
  (#3562023 Matthieu Casanova) [merged into 5.0.x]

- The .jedit/modes/catalog is now written using UTF-8 instead of default
  OS encoding (#3560800 Matthieu Casanova) [merged into 5.0.x]

- Undo restores selection state in simple cases (deletions, replaces
  on simple range selections). (patch #1570553 Maik Nijhuis, Thomas Meyer,
  Jarek Czekalski)

- Fix a case where a NPE occurs when removing a plugin
  (#3557441 Matthieu Casanova) [merged into 5.0.x]

- Filter not synchronizing in search dialog when
  "All buffers" is selected. (#1646584, patch #3549905 Eric Le Lay)

- Recognizing "Extra word characters" in "Whole word" option in
  searches (#3522497, patch #3543524 Malathi) [merged into 5.0.x]

- Fix pressing return in parent files of the VFS browser that do not browse